[project]
name = "working-wiki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain>=1.3.1",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "pathlib>=1.0.1",
    "pydantic>=2.13.4",
]
